# workshop

./: .gitignore  .mcp.json  CHANGELOG.md  CHANGELOG.md.tmp.bak  README.md  code-story-generator-next-steps.md  code-story-generator-plan.md  code-story-immediate-plan.md  demo.tape  feature-demo.tape  index.python.scip  pattern_extraction_analysis.md  release.sh  test.tape
.claude/: settings.json  workshop-pre-compact.sh  workshop-session-start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
finetune/: QUICKSTART.md  README.md  config.example.json  finetune.py  generate_training_data.py  inference.py  prepare_training_data.py
workshop/: LICENSE  README.md  RELEASING.md  coverage.xml  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.py  workshop-context.md
workshop/src/: __init__.py  cli.py  config.py  display.py  export.py  git_utils.py  jsonl_parser.py  migrate.py  models.py  project_detection.py  schema.sql  storage.py  storage_sqlite.py
workshop/src/claude_templates/: CLAUDE.md  README.md  settings.json  workshop-pre-compact.bat  workshop-session-end.bat  workshop-session-end.sh  workshop-session-start.bat  workshop-session-start.sh
workshop/src/claude_templates/commands/: workshop.sh
workshop/src/storage/: __init__.py  base.py  entries.py  import_history.py  preferences_state.py  raw_messages.py  sessions.py
workshop/src/web/: __init__.py  app.py
workshop/src/web/templates/: base.html  conversation.html  dashboard.html  edit.html  entries.html  messages.html  new.html  settings.html  view.html  view_message.html
workshop/tests/: test_cli.py  test_config.py  test_display.py  test_jsonl_parser.py  test_storage.py  test_storage_base.py  test_storage_sqlite.py  test_web.py
