[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-workshop"
version = "0.1.7"
description = "Persistent context and memory tool for Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude & Zach Swift", email = "zachswift615@gmail.com"}
]
keywords = [
    "claude",
    "claude-code",
    "context",
    "memory",
    "notes",
    "decisions",
    "development-tools",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/zachswift615/workshop"
Repository = "https://github.com/zachswift615/workshop"
Issues = "https://github.com/zachswift615/workshop/issues"

[project.scripts]
workshop = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = [
    "schema.sql",
    "claude_templates/*",
    "claude_templates/commands/*"
]
